ajuste do html com classe

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         <img scr="imagem\Destaque.jpg"
         alt="Noticia Principal">
         <h2>Manchete do dia</h2>
-        <p></p>
+        <p>Estrela de 18 anos, Barcelona alerta para risco: Yamal sofre nova lesão no púbis, desfalca a Espanha e volta de polêmica entre clube e seleção</p>
+        </section>
+        <section class="Noticia">
+             <article>
+                
+             </article>
+
         </section>
         </main>
 
